# mandelbrot-viewer

./: .gitignore  .gitmodules  CMakeGraphVizOptions.cmake  CMakeLists.txt  README.md
Debug/: run.sh
Release/: clean_build.sh
graphviz/: makeGraph.sh
src/base/: CMakeLists.txt
src/base/include/base/: color.hpp  constants.hpp  functions.hpp  macros.hpp  structs.hpp  typedefs.hpp
src/base/src/base/: conversations.cpp  conversations.h  planarTransformation.cpp  planarTransformation.h  randomGenerators.cpp  randomGenerators.h
src/display/: CMakeLists.txt
src/display/src/display/: display.cpp  display.h  displayOpenCV.cpp  displayOpenCV.h
src/executables/: CMakeLists.txt
src/executables/src/: main.cpp
src/mandelbrot/: CMakeLists.txt
src/mandelbrot/src/mandelbrot/: mandelbrot.cpp  mandelbrot.h
